; ModuleID = '/home/carl/AnghaBench/vlc/lib/extr_video.c_libvlc_video_get_cursor.c'
source_filename = "/home/carl/AnghaBench/vlc/lib/extr_video.c_libvlc_video_get_cursor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [12 x i8] c"mouse-moved\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @libvlc_video_get_cursor(i32* %0, i32 %1, i32* noalias %2, i32* noalias %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32* %2, i32** %8, align 8
  store i32* %3, i32** %9, align 8
  %11 = load i32*, i32** %6, align 8
  %12 = load i32, i32* %7, align 4
  %13 = call i32* @GetVout(i32* %11, i32 %12)
  store i32* %13, i32** %10, align 8
  %14 = load i32*, i32** %10, align 8
  %15 = icmp eq i32* %14, null
  br i1 %15, label %16, label %17

16:                                               ; preds = %4
  store i32 -1, i32* %5, align 4
  br label %24

17:                                               ; preds = %4
  %18 = load i32*, i32** %10, align 8
  %19 = load i32*, i32** %8, align 8
  %20 = load i32*, i32** %9, align 8
  %21 = call i32 @var_GetCoords(i32* %18, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i32* %19, i32* %20)
  %22 = load i32*, i32** %10, align 8
  %23 = call i32 @vout_Release(i32* %22)
  store i32 0, i32* %5, align 4
  br label %24

24:                                               ; preds = %17, %16
  %25 = load i32, i32* %5, align 4
  ret i32 %25
}

declare dso_local i32* @GetVout(i32*, i32) #1

declare dso_local i32 @var_GetCoords(i32*, i8*, i32*, i32*) #1

declare dso_local i32 @vout_Release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
